--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
@@ -21,8 +22,10 @@
     "@capacitor/android": "^5.5.0",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "^5.5.0",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "firebase": "^7.24.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
